fixed gap bug relating to wrapping

--- a/BlackRidge.css
+++ b/BlackRidge.css
@@ -13,7 +13,7 @@
     #headerNav {
         display: flex; 
         justify-content: space-between;
-
+        flex-wrap: nowrap;
         align-items: center; 
         padding: 30px; 
         position: relative; 
